[package]
name = "pokesearch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
rustemon = { version = "3.5.0", features = ["serialize"] }
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41", features = ["fs", "io-std", "io-util", "rt", "rt-multi-thread", "sync", "time"] }
toml = "0.8.19"
